# agentsightio

./: .gitignore  LICENSE  README.md  pyproject.toml
agentsight/: __init__.py  config.py  enums.py  exceptions.py  types.py
agentsight/client/: __init__.py  api_client.py  client.py  conversation_manager_client.py  main_client.py
agentsight/helpers/: __init__.py  attachments.py  conversation_utils.py  mime_types.py  serialization.py
agentsight/http/: __init__.py  client.py
agentsight/logging/: __init__.py  config.py  formatters.py
agentsight/token_handlers/: __init__.py  llama_index.py
agentsight/validators/: __init__.py  attachments_validators.py  conversation_validators.py
docs/: index.md  package-lock.json  package.json  tsconfig.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.ts  style.css
docs/.vitepress/theme/components/: CopyMarkdownButton.vue
docs/clients/: api.md  manager.md  tracker.md
docs/examples/anthropic/: anthropic.md
docs/examples/langchain/: langchain-fastapi.md
docs/examples/llamaindex/: llama-index-fastapi.md  llama-index-flask.md
docs/examples/openai/: openai.md
docs/fetching/: attachments.md  conversation.md  conversations.md
docs/getting-started/: api-reference.md  configuration.md  core-concepts.md  environments.md  metrics.md  quick-start.md
docs/managing/: delete.md  feedback.md  mark.md  rename.md  update.md
docs/tracking/: track-actions.md  track-answer.md  track-attachments.md  track-buttons.md  track-conversations.md  track-interaction.md  track-question.md  track-tokens.md
tests/: conftest.py
tests/client/: test_api_client.py  test_client_initialization.py  test_client_utility.py  test_conversation_manager_client.py  test_main_client_initialization.py
tests/client/trackers/: test_track_action.py  test_track_answer.py  test_track_attachments.py  test_track_button.py  test_track_get_or_create_conversation.py  test_track_initialize_conversation.py  test_track_question.py  test_track_token_usage.py
tests/helpers/: test_attachments.py  test_conversation_utils.py
tests/validators/: test_attachment_validators.py  test_conversation_validators.py
